[package]
name = "catnip_libos"
version = "0.1.0"
authors = ["Sujay Jayakar <sujayakar314@gmai.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.32"
catnip = { path = "../catnip", features = ["threadunsafe"] }
clap = "2.33.3"
dpdk-rs = { git = "https://github.com/sujayakar/dpdk-rs", rev = "b13aeb0230861d6b73275855b76d85263ce16b27" }
futures = "0.3"
hashbrown = { version = "0.9", features = ["nightly"] }
libc = "0.2.77"
rand = { version = "0.7.3", features = ["small_rng"] }
yaml-rust = "0.4.4"
histogram = "0.6.9"
must-let = { git = "https://github.com/sujayakar/must-let" }

[build-dependencies]
bindgen = "0.55.1"
